[gd_scene load_steps=15 format=3 uid="uid://ym3cvmyxqe21"]

[ext_resource type="Script" uid="uid://c3tkx1hh6cktm" path="res://Main/UI/MainMenu/menu.gd" id="1_u81ku"]
[ext_resource type="Texture2D" uid="uid://b7fw7tcjti5kw" path="res://assets/UI/Background.png" id="2_2tfbb"]
[ext_resource type="Script" uid="uid://cjsgsm0xbsigh" path="res://Main/UI/MainMenu/ParallaxMotion.gd" id="2_2un8v"]
[ext_resource type="Texture2D" uid="uid://b68qmdpntr6t5" path="res://assets/UI/SinnersHandMidground2.png" id="3_78n2u"]
[ext_resource type="Texture2D" uid="uid://c2x8j4y8vnd1d" path="res://assets/UI/SinnersHandForeground.png" id="3_iysyy"]
[ext_resource type="Texture2D" uid="uid://d0l03dkfp8t4f" path="res://assets/UI/SinnersHandMidground.png" id="3_ny0ke"]
[ext_resource type="Texture2D" uid="uid://cpwrg21fbj3ml" path="res://assets/UI/Mask.png" id="5_svcqa"]
[ext_resource type="FontFile" uid="uid://be672lysxmsqk" path="res://assets/fonts/Silver.ttf" id="8_ofy2k"]
[ext_resource type="Script" uid="uid://cq5xvjm4u0382" path="res://Main/UI/MainMenu/bouncy_text.gd" id="9_vt8y5"]
[ext_resource type="Script" uid="uid://cyqujq7a1vope" path="res://Main/UI/MainMenu/credits_menu.gd" id="10_w3gyq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aklih"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wav1i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qix1g"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vt8y5"]
font_size = 76

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u81ku")

[node name="Parallax" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -18.0
offset_right = 11.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Node2D" type="Node2D" parent="Parallax"]
position = Vector2(20, 20)
scale = Vector2(1.74, 1.74)
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="Parallax/Node2D"]
texture_filter = 1
position = Vector2(5.1724, -1.14944)
scale = Vector2(4.13793, 3.10345)
texture = ExtResource("2_2tfbb")
metadata/_edit_lock_ = true

[node name="Midground2" type="Sprite2D" parent="Parallax/Node2D"]
texture_filter = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_78n2u")
script = ExtResource("2_2un8v")
move_force = 4
lag_point = 135.0
metadata/_edit_lock_ = true

[node name="Mask" type="Sprite2D" parent="Parallax/Node2D"]
texture_filter = 1
position = Vector2(0, -30)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_svcqa")
script = ExtResource("2_2un8v")
move_force = 3
lag_point = 90.0
metadata/_edit_lock_ = true

[node name="Midground" type="Sprite2D" parent="Parallax/Node2D"]
texture_filter = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_ny0ke")
script = ExtResource("2_2un8v")
move_force = 2
lag_point = 45.0
metadata/_edit_lock_ = true

[node name="Foreground" type="Sprite2D" parent="Parallax/Node2D"]
texture_filter = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_iysyy")
script = ExtResource("2_2un8v")
metadata/_edit_lock_ = true

[node name="ForegroundDropSh" type="Sprite2D" parent="Parallax/Node2D/Foreground"]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(0, 3)
texture = ExtResource("3_iysyy")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 255.0
offset_right = 214.0
offset_bottom = 397.0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ofy2k")
text = "PLAY"
alignment = 0

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ofy2k")
theme_override_styles/normal = SubResource("StyleBoxEmpty_aklih")
text = "OPTIONS"
alignment = 0

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CREDITS"
alignment = 0

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ofy2k")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wav1i")
text = "QUIT"
alignment = 0

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 22.0
offset_right = 462.0
offset_bottom = 85.0
scale = Vector2(2.585, 2.585)
theme_override_font_sizes/font_size = 57
text = "PROXIMAL"
horizontal_alignment = 1
script = ExtResource("9_vt8y5")
amplitude = 5.0
lag_point = 30.0

[node name="Version" type="Label" parent="."]
layout_mode = 0
offset_left = 587.0
offset_top = 562.0
offset_right = 1145.0
offset_bottom = 649.0
theme_override_colors/font_color = Color(0.22, 0.22, 0.22, 1)
text = "version: too early to even give it a number
send bugs and suggestions to @clefalto on discord"
horizontal_alignment = 2

[node name="Options Menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="Options Menu"]
self_modulate = Color(1, 1, 1, 0.607843)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = 18.0
offset_right = -102.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qix1g")

[node name="MarginContainer" type="MarginContainer" parent="Options Menu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Options Menu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Options_Exit" type="Button" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 18
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Vol_Label" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ofy2k")
theme_override_font_sizes/font_size = 18
text = "Volume:"

[node name="Volume" type="HSlider" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="Resolution" type="HBoxContainer" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Res_Label" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Resolution"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ofy2k")
theme_override_font_sizes/font_size = 18
text = "Resolutions:"

[node name="Resolutions" type="OptionButton" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("8_ofy2k")
theme_override_font_sizes/font_size = 18
selected = 2
allow_reselect = true
item_count = 6
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "1024x576"
popup/item_3/id = 3
popup/item_4/text = "640x360"
popup/item_4/id = 4
popup/item_5/text = "256x144"
popup/item_5/id = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen_Label" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ofy2k")
theme_override_font_sizes/font_size = 18
text = "Fullscreen:"

[node name="Fullscreen_Checkbox" type="CheckBox" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
focus_mode = 0

[node name="ScrollWheel" type="HBoxContainer" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Scroll_Label" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ScrollWheel"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ofy2k")
theme_override_font_sizes/font_size = 18
text = "Inverted Scroll Direction:"

[node name="Scroll_Checkbox" type="CheckBox" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ScrollWheel"]
layout_mode = 2
focus_mode = 0

[node name="Mouse_Sensitivity" type="HBoxContainer" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Mouse_Label" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Mouse_Sensitivity"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ofy2k")
theme_override_font_sizes/font_size = 18
text = "Mouse Sensitivity:"

[node name="Mouse_Count_Label" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Mouse_Sensitivity"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ofy2k")
theme_override_font_sizes/font_size = 18
text = "000"

[node name="Control" type="Control" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Mouse_Sensitivity"]
layout_mode = 2

[node name="Mouse_Slider" type="HSlider" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Mouse_Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="Res_Label2" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("8_ofy2k")
theme_override_font_sizes/font_size = 18
text = "Inputs:"

[node name="VBoxContainer" type="VBoxContainer" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Reset_Button" type="Button" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 18
text = "Reset To Default"

[node name="CreditsMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_w3gyq")

[node name="BG" type="ColorRect" parent="CreditsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="CreditsMenu/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsMenu/BG/CenterContainer"]
layout_mode = 2

[node name="BigLabel" type="Label" parent="CreditsMenu/BG/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PROXIMAL early prototype dev team"
label_settings = SubResource("LabelSettings_vt8y5")

[node name="Hello" type="RichTextLabel" parent="CreditsMenu/BG/CenterContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[color=green]Garett Hammerle[/color] - Design, Programming, Art
[color=pink]Jordan Viramontes[/color] - Programming, Art
[color=blue]Thomas Nguyen[/color] - Programming, Menu and UI Design
[color=red]Kevin Wu[/color] - Programming
[color=goldenrod]Benedict Ignacio[/color] - Programming"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="ReturnButton" type="Button" parent="CreditsMenu/BG"]
layout_mode = 0
offset_left = 1106.0
offset_top = 7.0
offset_right = 1146.0
offset_bottom = 49.0
text = "X"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Options_Exit" to="." method="_on_options_exit_pressed"]
[connection signal="drag_ended" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/Volume" to="." method="_on_volume_drag_ended"]
[connection signal="value_changed" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="item_selected" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Resolution/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="toggled" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/Fullscreen_Checkbox" to="." method="_on_fullscreen_checkbox_toggled"]
[connection signal="toggled" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ScrollWheel/Scroll_Checkbox" to="." method="_on_scroll_checkbox_toggled"]
[connection signal="drag_ended" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Mouse_Sensitivity/Mouse_Slider" to="." method="_on_mouse_slider_drag_ended"]
[connection signal="value_changed" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Mouse_Sensitivity/Mouse_Slider" to="." method="_on_mouse_slider_value_changed"]
[connection signal="pressed" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/Reset_Button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="CreditsMenu/BG/ReturnButton" to="CreditsMenu" method="_on_return_button_pressed"]
